--- a/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto:wght@500&display=swap');
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 * {
   box-sizing: border-box;
   margin: 0;
