--- a/HRM_LOCAL/HRM_LOCAL_UI/src/pages/AllEmployees/AllEmployeesComponents/styles.module.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/pages/AllEmployees/AllEmployeesComponents/styles.module.css
@@ -18,3 +18,10 @@
     font-weight:400;
     padding:10px 0px;    
   } */
+  .example {
+    
+    height: 830px;/*..very important if you want scroll bar...*/
+    overflow-y: auto;
+    overflow-x: hidden;
+    scroll-behavior:none;
+  }
