--- a/HRM_LOCAL/HRM_LOCAL_UI/src/NavBar/Sidebar.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/NavBar/Sidebar.css
@@ -2,3 +2,14 @@
 {
     text-decoration: none;
 }
+.example {
+    
+    height: 720px;/*..very important if you want scroll bar...*/
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+    .accordion-button {
+        background-color:black !important;
+        color: white;
+      }
