--- a/HRM_LOCAL/HRM_LOCAL_UI/src/NavBar/Sidebar.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/NavBar/Sidebar.css
@@ -12,4 +12,39 @@
     .accordion-button {
         background-color:black !important;
         color: white;
+        /* background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important; */
       }
+
+      .panel-wrap {
+        margin-bottom: 5px;
+      }
+      
+      .panel-wrap.active-panel .panel-header {
+        background: #396ea5;
+      }
+      .panel-wrap.active-panel .panel-header button {
+        color: #ffffff;
+      }
+      
+      .panel-header {
+        border: 1px solid #cccc;
+        font-weight: normal;
+        border-radius: 5px 5px 0px 0px;
+      }
+      
+      .panel-header button {
+        border: none;
+        background: transparent;
+      }
+      .panel-header button:focus {
+        outline: 0px auto -webkit-focus-ring-color;
+      }
+      
+      .panel-body {
+        border: 1px solid #dddddd;
+        background: #efefef;
+        color: #333333;
+        padding: 5px;
+        border-top: none;
+      }
+      
