user access code was integrated

--- a/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
@@ -17,7 +17,7 @@
 .products,
 .team,
 .reports {
-  display: flex;
+  /* display: flex; */
   height: 90vh;
   align-items: center;
   justify-content: center;
