--- a/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
@@ -142,7 +142,7 @@ main {
 body{
   font-family: 'PT Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
-  background-color: #fff;
+  background-color: rgb(242, 248, 249);
 }
 
 *{
