--- a/HRM_LOCAL/HRM_LOCAL_UI/src/pages/Recruitment-Tracker/RequisitionDashboard/EmployeeDashboard/EmployeeDashboard.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/pages/Recruitment-Tracker/RequisitionDashboard/EmployeeDashboard/EmployeeDashboard.css
@@ -1,4 +1,6 @@
 .fnt {
-    font-family: 'Dancing Script', cursive;
-    font-family: 'Gentium Plus', serif;
+    /* font-family: 'Dancing Script', cursive; */
+    /* font-family: 'Gentium Plus', serif; */
+
+    font-family: 'Montserrat', sans-serif;
 }
