--- a/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
+++ b/HRM_LOCAL/HRM_LOCAL_UI/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto:wght@500&display=swap');
 
+
+
 /* ::-webkit-scrollbar {
   display: none;
 } */
@@ -11,6 +13,8 @@
   font-family: 'Roboto', sans-serif;
   
 }
+
+
 
 .home,
 .reports,
@@ -28,11 +32,15 @@ body
   background-color: #f7f7f7;
 }
 
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+
 
 .main-container {
   display: flex;
@@ -41,11 +49,15 @@ main {
   padding: 10px;
 }
 
+
+
 .title {
   font-size: 3rem;
-  /* display: grid;
-  place-items: center; */
+  display: grid;
+  place-items: center;
 }
+
+
 
 /* Sidebar */
 /* .sidebar {
@@ -54,6 +66,8 @@ main {
   height: 900px;
   //overflow-y: auto;
 } */
+
+
 
 .top_section {
   display: flex;
@@ -72,6 +86,8 @@ main {
   display: none;
 }
 
+
+
 .search {
   display: flex;
   align-items: center;
@@ -85,8 +101,12 @@ main {
   border-radius: 5px;
   background: rgb(238, 238, 238);
 
-  color: white;
+
+
+ color: white;
 }
+
+
 
 .routes {
   margin-top: 15px;
@@ -94,11 +114,11 @@ main {
   flex-direction: column;
   gap: 5px;
 }
-/* .link {
+.link {
   display: flex;
   color: white;
-  gap: 10px;
-  padding: 5px 10px;
+  /* gap: 10px; */
+  /* padding: 5px 10px; */
   border-right: 4px solid transparent;
   transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
@@ -114,13 +134,17 @@ main {
 .link_text {
   white-space: nowrap;
   font-size: -19px;
-} */
+}
+
+
 
 .menu {
   display: flex;
   color: white;
 
-  padding: 5px 10px;
+
+
+ padding: 5px 10px;
   border-right: 4px solid transparent;
   transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   justify-content: space-between;
@@ -139,11 +163,15 @@ main {
 }
 
 
+
+
 body{
   font-family: 'PT Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
   background-color: rgb(242, 248, 249);
 }
+
+
 
 *{
   margin:0;
@@ -152,13 +180,13 @@ body{
 }
 .container-fluid{
   display:flex;
-} 
+}
 main{
   width: 100%;
   padding: 20px;
 }
 .sidebar_content{
-  background: grey;
+  background: #000;
   color: #fff;
   height: 100vh;
   width: 100px;
@@ -178,11 +206,11 @@ main{
   font-size: 25px;
   margin-left: 50px;
 }
-/* .link{
+.link{
   display: flex;
   color: #fff;
-  padding: 3.5px 15px;
-  gap: 15px;
+  /* padding: 3.5px 15px; */
+  /* gap: 15px; */
   transition: all 0.5s;
   text-decoration: none;
 }
@@ -197,31 +225,41 @@ main{
 }
 .icon, .link_text{
   font-size: 20px;
-} */
+}
 .bg-myRed{
   background-color: crimson;
 }
+
+
 
 .content{
   padding: 12px;
   height: 3000px;
 }
 
+
+
 .coloring{
-  color: grey;
+  color: black;
 }
+
+
 
 /* .scroll {
   max-height: 83vh;
- overflow: scroll;
+overflow: scroll;
     position: relative;
   
 } */
+
+
 
 .text_size {
   
   font-size: 15px;
 }
+
+
 
 .AppbarStatus{
   border-radius: 15px 50px 30px 5px
@@ -238,3 +276,45 @@ main{
 }
 
 
+
+
+.panel-wrap {
+  margin-bottom: 5px;
+}
+
+
+
+.panel-wrap.active-panel .panel-header {
+  background: #396ea5;
+}
+.panel-wrap.active-panel .panel-header button {
+  color: #ffffff;
+}
+
+
+
+.panel-header {
+  border: 1px solid #cccc;
+  font-weight: normal;
+  border-radius: 5px 5px 0px 0px;
+}
+
+
+
+.panel-header button {
+  border: none;
+  background: transparent;
+}
+.panel-header button:focus {
+  outline: 0px auto -webkit-focus-ring-color;
+}
+
+
+
+.panel-body {
+  border: 1px solid #dddddd;
+  background: #efefef;
+  color: #333333;
+  padding: 5px;
+  border-top: none;
+}
